prevent zooming on mobile

--- a/static/skeleton.css
+++ b/static/skeleton.css
@@ -280,6 +280,14 @@ input:focus {
   border: 1px solid #222;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
+
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
